--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
 
-[*.{html,js,json,less,css}]
+[*.{html,js,jsx,json,less,css}]
 indent_size = 2
 
 [*.{feature,yaml,yml}]
